libs/extractor/src/snapshots/extractor__tests__extract_conditional_style_props_with_class_name.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {Box as DevupButton} from '@devup-ui/core'\n        <DevupButton\n      className={className}\n      typography={typography}\n    >\n    </DevupButton>\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "((__devupValue0, __devupValue1) => <div className={`${__devupValue0 || \"\"} ${((__devupTypography) => __devupTypography ? `typo-${__devupTypography}` : \"\")(__devupValue1)}`}>\n    </div>)(className, typography);\n",
}
