libs/extractor/src/snapshots/extractor__tests__extract_global_css-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from \"@devup-ui/core\";\nglobalCss({\n  [`div`]: {\n    bg: \"green\"\n  }\n})\n\"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "green",
                level: 0,
                selector: Some(
                    Global(
                        "div",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n\"\";\n",
}
